[package]
name = "solana_holders"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"

anyhow = "1.0.100"
tokio-util = "0.7.16"
tokio = { version = "1.45", features = ["full"] }
futures = "0.3.31"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# 浮点数处理
rust_decimal = { version = "1.35", features = ["serde-str"] }

# solana链上交互
solana-client = "2.2.7"
solana-sdk = "2.2.2"
spl-token = "8.0.0"
solana-transaction-status-client-types = "2.2.7" # Solana 交易状态客户端类型

# 用于与 Yellowstone gRPC 服务进行交互的客户端库
yellowstone-grpc-client = "6.1.0"

# gRPC 相关的 Proto 文件定义，用于数据结构的序列化和反序列化
yellowstone-grpc-proto = "6.1.0"
tracing = "0.1.41"
serde_json = "1.0.145"
serde = { version = "1.0.227", features = ["derive"] }
log = "0.4.28"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
